# bevy_particles

./: Cargo.toml  img.txt  img.yuv  img_black.txt  u_s.txt  v_s.txt  y_s.txt
.cargo/: config.toml
src/: main.rs  particle.rs
